--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">CDR</string>
     <string name="title_activity_main">CDR</string>
-
     <string name="action_settings">Settings</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="formula_nav_drawer">Dice Formula</string>
+    <string name="individual">Individual</string>
+    <string name="combined">Combined</string>
 </resources>
