Did some more stuff

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="settings_nav_drawer">Settings</string>
 
     <string name="individual_first_text">Show individual results first</string>
+    <string name="google_drive_text">Save Dice to Google Drive (Coming Soon)</string>
 
     <string name="individual">Individual</string>
     <string name="combined">Combined</string>
