More Settings stuff. Starting work on displaying custom dice & dice groups Worked a bit on splash screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,15 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="formula_nav_drawer">Dice Formula</string>
+    <string name="die_nav_drawer">Dice</string>
+    <string name="dice_group_nav_drawer">Dice Groups</string>
     <string name="settings_nav_drawer">Settings</string>
+    <string name="other_nav_group">Other</string>
 
     <string name="individual_first_text">Show individual results first</string>
     <string name="google_drive_text">Save Dice to Google Drive (Coming Soon)</string>
     <string name="theme_text">Light Theme (Coming Soon)</string>
+    <string name="default_section">Default Section</string>
 
     <string name="individual">Individual</string>
     <string name="combined">Combined</string>
