--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="add_dice">Add Dice</string>
     <string name="add_dice_group">Add Dice Group</string>
     <string name="clear">Clear</string>
+
+    <string name="modifier">Modifier</string>
 </resources>
