Working on die and dice editing and saving

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
 
     <string name="simple_side">Simple Side</string>
     <string name="complex_side">Complex Side</string>
+    <string name="roll">Roll</string>
 
     <string name="modifier">Modifier</string>
 </resources>
