Finished up initial die creation and editing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,7 @@
     <string name="delete">Delete</string>
     <string name="number">Number:</string>
     <string name="add_part">Add Part</string>
+
+    <string name="rename">Rename</string>
+    <string name="rename_dialog">Name:</string>
 </resources>
