--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,7 @@
 
     <string name="rename">Rename</string>
     <string name="rename_dialog">Name:</string>
+
+    <string name="number_die">Number Die</string>
+    <string name="custom_die">Custom Die</string>
 </resources>
