--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,8 @@
     <string name="invalid_name">Names cannot contain {,},+, or -</string>
     <string name="overwrite_warning_die">There is already another die by this name, if you continue that die will be overwritten</string>
     <string name="overwrite_warning_group">There is already another dice group by this name, if you continue that group will be overwritten</string>
+
+    <string name="upload_profiles_drive">Do you want to upload your existing dice and dice groups?</string>
+
+    <string name="sync_waiting">Downloading and uploading dice</string>
 </resources>
