--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,15 +1,9 @@
 {
     "cdr": "Custom Dice Roller",
     "settings": "Settings",
-    "numDie": "d{number}",
-    "@numDie": {
-        "description": "Standard die notation",
-        "placeholders": {
-            "number":{
-                "type": "int",
-                "example": "20"
-            }
-        }
+    "dieNotation": "d",
+    "@dieNotation": {
+        "description": "Die notation"
     },
     "calculator": "Calculator"
 }
