Calculator is (somewhat) usable now! Dice can now be renamed without title collision!

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -11,6 +11,9 @@
     "diceGroups": "Dice Groups",
     "loading": "Loading...",
 
+    "dieUniqueName": "Die must have a unique name",
+    "mustName": "Die must have a name",
+
     "settings": "Settings",
     "darkTheme": "Dark Theme",
     "lightTheme": "Light Theme",
