Speed dial for die edit Slight organization. vertical page transitions instead of horizontal

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -19,6 +19,8 @@
     "dieInvalidCharacter": "Die name cannot contain curly braces",
     "mustName": "Die must have a name",
     "dieName": "Die Name",
+    "simple": "Simple",
+    "complex": "Complex",
 
     "settings": "Settings",
     "darkTheme": "Dark Theme",
