You can now add sides to dice Tweaks to Calculator Speed dial tweaks Default delete button on non-web and non-mobile Default swipe delete on web or mobile

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -21,6 +21,8 @@
     "dieName": "Die Name",
     "simple": "Simple",
     "complex": "Complex",
+    "add": "Add",
+    "cancel": "Cancel",
 
     "settings": "Settings",
     "darkTheme": "Dark Theme",
