More work on Calculator UI Added error message if calculator formula is invalid

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -24,6 +24,9 @@
     "add": "Add",
     "cancel": "Cancel",
 
+    "parseError": "Cannot solve formula as given",
+    "addDie": "Add Die",
+
     "settings": "Settings",
     "darkTheme": "Dark Theme",
     "lightTheme": "Light Theme",
