Better dice results Finished (?) calculator layout Tweaks to dice editing

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -22,6 +22,7 @@
     "simple": "Simple",
     "complex": "Complex",
     "add": "Add",
+    "update": "Update",
     "cancel": "Cancel",
 
     "parseError": "Cannot solve formula as given",
