Added proper drive failure

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -18,6 +18,10 @@
 
     "loading": "Loading...",
     "loadingDrive": "Loading Google Drive...",
+    "driveError": "Failed Sync",
+    "driveErrorExplaination": "Failed to sync with Google Drive. Either retry or continue offline.",
+    "retry": "Retry",
+    "continueOffline": "Continue Offline",
 
     "individual": "Individual",
     "combined": "Combined",
