--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,8 +1,8 @@
 {
     "introWelcomeTitle": "Welcome!",
     "introWelcomeSub": "Thank you for giving this app a try, but before we get started, we need to set some preferences.",
-    "introFirebaseTitle": "Firebase",
-    "introFirebaseSub": "Custom Dice Roller makes use of Firebase by Google. Firebase is used in the project to provide crash reporting (via Crashlytics) and possibly other functions in the future (ads, analytics). Rest assured that if more functions are added, you'll be seeing this screen again. If you want to, you can disable Firebase completely, or each function independently. You can change this later in settings.",
+    "introStupidTitle": "Stupid Backend",
+    "introStupidSub": "This app (optionally) uses a backend called Stupid Backend. It is completely open source and collects zero information other then what's needed. Functionality will expand in the future, but right now it's used for crash reporting and logging the app's startup (for user count). No sensitive information is collected or stored.",
     "introOtherTitle": "Other Preferences",
     
     "cdr": "Custom Dice Roller",
@@ -46,8 +46,9 @@
     "lightTheme": "Light Theme",
     "calculatorKeyboard": "Allow keyboard input on the calculator",
     "keyboardWarning": "Use at your own risk",
-    "firebase": "Firebase",
-    "crashlytics": "Crashlytics",
+    "stupid": "Stupid backend",
+    "stupidCrash": "Crash reporting",
+    "stupidLog": "Stupid startup log",
     "individualPref": "Show individual results first",
     "amoledTheme": "Amoled (Pitch Black) Dark Theme",
     "disableAnimations": "Disable Animations",
