--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -36,6 +36,8 @@
     "add": "Add",
     "update": "Update",
     "cancel": "Cancel",
+    "toComplex": "To Complex",
+    "addPart": "Add Part",
 
     "parseError": "Cannot solve formula as given",
     "addDie": "Add Die",
