History & Saved! Complex side editing tweaks

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -41,6 +41,8 @@
 
     "parseError": "Cannot solve formula as given",
     "addDie": "Add Die",
+    "history": "History",
+    "saved": "Saved",
 
     "settings": "Settings",
     "drive": "Sync to Google Drive",
