Added drive retry to settings

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -20,6 +20,7 @@
     "loadingDrive": "Loading Google Drive...",
     "driveError": "Failed Sync",
     "driveErrorExplaination": "Failed to sync with Google Drive. Either retry or continue offline.",
+    "driveSettingError": "Failed to turn on Google Drive. Retry?",
     "retry": "Retry",
     "continueOffline": "Continue Offline",
 
