--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -27,6 +27,10 @@
     "individual": "Individual",
     "combined": "Combined",
 
+    "dieDeleted": "Die Deleted",
+    "sideDeleted": "Side Deleted",
+    "undo": "Undo",
+
     "pleaseAddSide": "Please add at least one side",
     "dieUniqueName": "Die must have a unique name",
     "dieInvalidCharacter": "Die name cannot contain curly braces",
